Removed a left margin from open issues. It's not needen after it was chened to flex wrap.

--- a/src/app/components/github-api-main/github-repo/open-issues/open-issues.component.styl
+++ b/src/app/components/github-api-main/github-repo/open-issues/open-issues.component.styl
@@ -1,6 +1,5 @@
 @import '../../../../../variables.styl'
 :host
-    margin-left: .8rem
     background-color: boxBColor
     padding: boxPadding
     word-wrap: break-word
